Bug#19911 ndb does not work on sol10 x86

sql/ha_ndbcluster_binlog.cc:
  Change 'assert' to 'DBUG_ASSERT' to avoid that the assert is triggered in the optimized version
  on solaris 10 for x86